corpus/tests.txt
================================================================================
Comment
================================================================================

// this is a comment

/*
  Multi-line comment
*/

--------------------------------------------------------------------------------

(program
  (comment)
  (comment))

================================================================================
Models
================================================================================

model m of Mapping
{
  Foo(a1,b2).
}


--------------------------------------------------------------------------------

(program
  (module
    (model
      (model_sig_config
        (model_sig
          (model_intro
            (bareid)
            (mod_ref
              (mod_ref_no_rename
                (bareid))))))
      (model_body
        (model_sentence
          (model_fact_list
            (model_fact
              (func_term
                (id
                  (bareid))
                (func_term_list
                  (func_or_compr
                    (func_term
                      (atom
                        (id
                          (bareid)))))
                  (func_or_compr
                    (func_term
                      (atom
                        (id
                          (bareid))))))))))))))

================================================================================
Dotted identifiers
================================================================================
domain D
{
   A :- x is y.
   A :- x is B.y.
}
--------------------------------------------------------------------------------

(program
  (module
    (domain
      (domain_sig_config
        (domain_sig
          (bareid)))
      (dom_sentences
        (dom_sentence_config
          (dom_sentence
            (rule
              (func_term_list
                (func_or_compr
                  (func_term
                    (atom
                      (id
                        (bareid))))))
              (body_list
                (body
                  (constraint
                    (id
                      (bareid))
                    (func_term
                      (atom
                        (id
                          (bareid))))))))))
        (dom_sentence_config
          (dom_sentence
            (rule
              (func_term_list
                (func_or_compr
                  (func_term
                    (atom
                      (id
                        (bareid))))))
              (body_list
                (body
                  (constraint
                    (id
                      (bareid))
                    (func_term
                      (atom
                        (id
                          (qualid))))))))))))))
